--- a/src/app/views/categories/categories.component.html
+++ b/src/app/views/categories/categories.component.html
@@ -15,7 +15,8 @@
             <input type="text" class="form-control">
           </div>
         </div>
-        <ul class="navbar-nav  justify-content-end">
+        <!-- start -->
+        <!-- <ul class="navbar-nav  justify-content-end">
           <li class="nav-item d-flex align-items-center">
             <a class="btn btn-outline-primary btn-sm mb-0 me-3" target="_blank" href="https://www.creative-tim.com/builder?ref=navbar-material-dashboard">Online Builder</a>
           </li>
@@ -115,7 +116,7 @@
               <span class="d-sm-inline d-none">Sign In</span>
             </a>
           </li>
-        </ul>
+        </ul> -->
       </div>
     </div>
   </nav>
