--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <mat-drawer-container class="example-container" autosize>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
+  <mat-drawer #drawer class="example-sidenav" mode="side" opened>
     <app-categories></app-categories>
   </mat-drawer>
 
@@ -32,8 +32,8 @@
         </div>
         <ul class="navbar-nav  justify-content-end">
           <li class="nav-item d-flex align-items-center">
-            <button class="btn btn-outline-primary btn-sm mb-0 me-3"  mat-button (click)="drawer.toggle()">
-              Toggle sidenav
+            <button class="btn btn-outline-info btn-sm mb-0 me-3"  mat-button (click)="drawer.toggle()">
+              ОТКРЫТЬ МЕНЮ
             </button>
           </li>
           <li class="nav-item d-flex align-items-center">
