--- a/src/app/views/categories/categories.component.html
+++ b/src/app/views/categories/categories.component.html
@@ -9,11 +9,8 @@
     <hr class="horizontal light mt-0 mb-2">
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
       <ul class="navbar-nav">
-        <li class="nav-item" *ngFor="let category of categories">
+        <li *ngFor="let category of categories" class="nav-item" (click)="showTasksByCategory(category)">
           <a class="nav-link text-white active bg-gradient-primary" >
-            <!-- <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-              <i class="material-icons opacity-10">dashboard</i>
-            </div> -->
             <span class="nav-link-text ms-1">{{category.title}}</span>
           </a>
         </li>
